--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,4 @@ compatibility_flags = [ "nodejs_compat" ]
 [vars]
 OTEL_EXPORTER_OTLP_ENDPOINT = "https://gateway.otlp.hasura.io:443/v1/traces"
 OTEL_EXPORTER_PAT = "<PAT>"
+GRAPHQL_SERVER_URL = "<GRAPHQL_SERVER_URL>"
