--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "npx --yes prettier --check .",
     "format": "npx --yes prettier --write .",
     "build": "tsc",
-    "serve": "node dist/app.js"
+    "serve": "NODE_PATH=./dist node dist/app.js",
+    "serve-dev": "nodemon src/app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.17.19",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "wrangler": "^3.71.0"
   },
