--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "wrangler dev",
     "start": "wrangler dev",
     "typecheck": "tsc --noEmit --skipLibCheck",
+    "typecheck:watch": "tsc --noEmit --skipLibCheck --watch",
     "lint": "npx --yes prettier --check .",
     "format": "npx --yes prettier --write .",
     "build": "tsc",
@@ -33,6 +34,7 @@
     "@opentelemetry/sdk-trace-node": "1.17.0",
     "@opentelemetry/semantic-conventions": "1.17.0",
     "express": "^4.21.1",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "zod": "^3.24.2"
   }
 }
