--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ name: test
 
 jobs:
   build:
-    name: Typecheck
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,6 +24,6 @@ jobs:
             connector
             plugin
 
-      - name: run tests 
+      - name: run tests
         run: |
           npm run test
