Provide configuration from a file when running in Docker (#4)
* Add zod schemas, remove any

* Use request type

* WIP

* Add working test harness

* Start configuring

* Hooray

* Snapshot tests

* Remove logs

* Format everything

* Add job to run tests

* Use ghcr image for ndc-postgres

* Naming and formatting

* Move config types

* Tidy readme

* Format again

* Revert changes

* Parse config once at startup

* Format

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": false,
     "allowJs": true,
     "outDir": "dist",
-    "types": ["node"],
+    "types": ["node", "jest"],
     "skipLibCheck": true
   },
   "include": ["src"]
