--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "dev": "wrangler dev",
     "start": "wrangler dev",
     "typecheck": "tsc --noEmit --skipLibCheck",
+    "typecheck:watch": "tsc --noEmit --skipLibCheck --watch",
     "lint": "npx --yes prettier --check .",
     "format": "npx --yes prettier --write .",
     "build": "tsc",
     "serve": "NODE_PATH=./dist node dist/app.js",
-    "serve-dev": "nodemon src/app.ts"
+    "serve-dev": "nodemon src/app.ts",
+    "test": "jest",
+    "test:update": "jest --updateSnapshot"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.17.19",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.2",
     "wrangler": "^3.71.0"
   },
   "dependencies": {
@@ -33,6 +39,7 @@
     "@opentelemetry/sdk-trace-node": "1.17.0",
     "@opentelemetry/semantic-conventions": "1.17.0",
     "express": "^4.21.1",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "zod": "^3.24.2"
   }
 }
