--- a/tests/docker-compose.yaml
+++ b/tests/docker-compose.yaml
@@ -1,7 +1,8 @@
 services:
   plugin:
-    build:
-      context: ..
+    image: ghcr.io/hasura/engine-plugin-restified-endpoint:v0.0.1
+    # build:
+    #   context: ..
     ports:
       - 8787:8787
     environment:
