--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.19",
+    "aws-cdk": "2.1030.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.6",
@@ -38,8 +39,12 @@
     "@opentelemetry/sdk-trace-base": "1.17.0",
     "@opentelemetry/sdk-trace-node": "1.17.0",
     "@opentelemetry/semantic-conventions": "1.17.0",
+    "aws-cdk-lib": "2.215.0",
+    "constructs": "^10.0.0",
     "express": "^4.21.1",
-    "serverless-http": "^3.2.0",
+    "pino": "^10.0.0",
+    "pino-http": "^11.0.0",
+    "serverless-http": "^4.0.0",
     "zod": "^3.24.2"
   }
 }
