--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "types": ["node", "jest"],
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "cdk.out"]
 }
