ci: add release pipeline (#6)
* ci: add release pipeline
* add HASURA_M_AUTH environment variable
* support aws lambda
* update dependencies

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,21 +7,23 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: install tools
         run: |
           npm install
 
       - name: start dependencies
-        uses: hoverkraft-tech/compose-action@v2.2.0
+        uses: hoverkraft-tech/compose-action@v2
         with:
-          compose-file: "./tests/docker-compose.yaml"
+          cwd: "${{ github.workspace }}/tests"
+          compose-file: "./compose.yaml"
           down-flags: "--volumes"
           up-flags: "--wait"
           services: |
             engine
-            connector
+            postgres
+            app_mypostgres
             plugin
 
       - name: run tests
