--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+!tests/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -135,3 +136,6 @@ dist
 # direnv
 .direnv/
 .envrc.local
+
+# AWS CDK
+cdk.out/
