add debug logs and tests

--- a/tests/compose.yaml
+++ b/tests/compose.yaml
@@ -32,6 +32,7 @@ services:
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://jaeger:4317"
       GRAPHQL_SERVER_URL: "http://engine:3000/graphql"
       HASURA_M_AUTH: zZkhKqFjqXR4g5MZCsJUZCnhCcoPyZ
+      LOG_LEVEL: debug
     volumes:
       - type: bind
         source: ./config/plugin/
