--- a/package.json
+++ b/package.json
@@ -19,32 +19,33 @@
     "test:update": "jest --updateSnapshot"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.7.2",
-    "aws-cdk": "2.1030.0",
+    "@types/node": "^24.10.1",
+    "aws-cdk": "2.1031.2",
     "jest": "^30.2.0",
-    "nodemon": "^3.1.10",
+    "nodemon": "^3.1.11",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "wrangler": "^4.43.0"
+    "wrangler": "^4.47.0"
   },
   "dependencies": {
     "@microlabs/otel-cf-workers": "^1.0.0-rc.52",
     "@opentelemetry/api": "1.9.0",
-    "@opentelemetry/core": "2.1.0",
-    "@opentelemetry/instrumentation": "0.206.0",
-    "@opentelemetry/instrumentation-http": "0.206.0",
-    "@opentelemetry/propagator-b3": "2.1.0",
-    "@opentelemetry/resources": "2.1.0",
-    "@opentelemetry/sdk-trace-base": "2.1.0",
-    "@opentelemetry/sdk-trace-node": "2.1.0",
-    "@opentelemetry/semantic-conventions": "1.37.0",
-    "aws-cdk-lib": "2.220.0",
-    "constructs": "^10.0.0",
+    "@opentelemetry/core": "2.2.0",
+    "@opentelemetry/instrumentation": "0.208.0",
+    "@opentelemetry/instrumentation-http": "0.208.0",
+    "@opentelemetry/propagator-b3": "2.2.0",
+    "@opentelemetry/resources": "2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/sdk-trace-base": "2.2.0",
+    "@opentelemetry/sdk-trace-node": "2.2.0",
+    "@opentelemetry/semantic-conventions": "1.38.0",
+    "aws-cdk-lib": "2.223.0",
+    "constructs": "^10.4.3",
     "express": "^5.1.0",
-    "pino": "^10.0.0",
+    "pino": "^10.1.0",
     "pino-http": "^11.0.0",
     "serverless-http": "^4.0.0",
     "zod": "^4.1.12"
