--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,9 @@ name = "restified-endpoints"
 main = "src/worker.ts"
 compatibility_date = "2025-01-01"
 workers_dev = true
-compatibility_flags = [ "nodejs_compat" ]
+compatibility_flags = ["nodejs_compat"]
 
 [vars]
-OTEL_EXPORTER_OTLP_ENDPOINT = "https://gateway.otlp.hasura.io:443/v1/traces"
+OTEL_EXPORTER_OTLP_ENDPOINT = "https://gateway.otlp.hasura.io:443"
 OTEL_EXPORTER_PAT = "<PAT>"
 GRAPHQL_SERVER_URL = "<GRAPHQL_SERVER_URL>"
